# unicode-detector

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  unicode-detector.py
.github/workflows/: ci.yaml  publish.yaml  reusable-unicode-detector.yaml  unicode-detector.yaml
examples/: pyproject.toml
tests/: test_cli.py  test_config.py
unicode_detector/: __init__.py  __main__.py  cli.py  config.py  scanner.py
